--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "ms": "^2.1.3",
     "nestjs-zod": "^4.3.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.8.0",
     "rxjs": "^7.8.1",
     "zod": "^4.0.10"
   },
