--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "init-seed-data": "ts-node src/initialScript/index.ts",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "email:dev": "email dev",
+    "email:build": "email build",
+    "email:export": "email export",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,12 +29,15 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.1.5",
     "@prisma/client": "^6.12.0",
+    "@react-email/components": "0.4.0",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "ms": "^2.1.3",
     "nestjs-zod": "^4.3.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.8.0",
     "rxjs": "^7.8.1",
@@ -43,6 +49,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@react-email/preview-server": "^4.2.8",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
@@ -57,6 +64,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "prisma": "^6.12.0",
+    "react-email": "4.2.8",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
