--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "jsx" : "react",
     "strictNullChecks": true,
     "esModuleInterop": true,
     "declaration": true,
