Thêm tính năng login/logout

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^4.8.0",
     "rxjs": "^7.8.1",
-    "zod": "^4.0.10"
+    "uuid": "^11.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
