--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "google-auth-library": "^10.2.1",
     "ms": "^2.1.3",
     "nestjs-zod": "^4.3.1",
     "react": "19.1.1",
@@ -62,6 +63,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "googleapis": "^146.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "prisma": "^6.12.0",
